--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
           <div class="col-lg-7">
             <a class="navbar-brand" href="index.html">
-              <img class="d-inline-block logo" src="images/logo.png" width="110" height="133" alt="logo" longdesc="index.html">
+              <img class="d-inline-block logo" src="images/logo.png"  alt="logo" longdesc="index.html">
               <p class="title text-dark font-weight-bold">Custom Woodworks <br class="hidden-ss"> and <br class="hidden-ss"> Home Improvements</p>
               <!-- <span class="title text-dark font-weight-bold">Custom Woodworks</span><br>
               <span class="title text-dark font-weight-bold">Home Improvements</span> -->
@@ -185,6 +185,7 @@
     <div class="container servicesContainer">
       <h3>We provide</h3>
       <div class="row">
+
         <div class="col-lg-6 col-md-6 col-sm-6">
           <div class="card mb-3" style="max-width: 540px;">
             <div class="row g-0">
@@ -219,8 +220,8 @@
           </div>
         </div>
 
-      </div>
-      <div class="row">
+
+
         <div class="col-lg-6 col-md-6 col-sm-6">
           <div class="card mb-3" style="max-width: 540px;">
             <div class="row g-0">
@@ -245,7 +246,7 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body text-dark">
-                  <h5 class="card-title">Closets & Cabinetry</h5>
+                  <h5 class="card-title">Painting</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                 </div>
@@ -261,7 +262,7 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Painting</h5>
+                  <h5 class="card-title">Closets & Cabinetry</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                 </div>
@@ -285,9 +286,9 @@
             </div>
           </div>
         </div>
-
       </div>
 
+    </div>
     </div>
   </section>
   <hr>
