--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,6 @@
 </head>
 
 <body>
-  <!-- <div class="container mainContainer"> -->
-
 
   <button type="button" name="button" id="btnScrollToTop">
     <i class="material-icons">arrow_upward</i>
@@ -43,7 +41,8 @@
           <div class="col-lg-7">
             <a class="navbar-brand" href="index.html">
               <img class="d-inline-block logo" src="images/logo.png" width="110" height="133" alt="logo" longdesc="index.html">
-              <p class="title text-dark font-weight-bold">Custom Woodworks <br class="hidden-ss"> and <br class="hidden-ss"> Home Improvements</p>
+              <!-- <p class="title text-light font-weight-bold">Custom Woodworks <br class="hidden-ss"> and <br class="hidden-ss"> Home Improvements</p> -->
+              <p class="title text-light font-weight-bold">Custom Woodworks <br> & <br> Home Improvements</p>
               <!-- <span class="title text-dark font-weight-bold">Custom Woodworks</span><br>
               <span class="title text-dark font-weight-bold">Home Improvements</span> -->
             </a>
@@ -81,19 +80,19 @@
               <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item">
-                  <a class="nav-link text-dark font-weight-bold" href="index.html">Home</a>
+                  <a class="nav-link text-light font-weight-bold" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark font-weight-bold" href="index.html#services">Services</a>
+                  <a class="nav-link text-light font-weight-bold" href="index.html#services">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark font-weight-bold" href="gallery.html">Gallery</a>
+                  <a class="nav-link text-light font-weight-bold" href="gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark font-weight-bold" href="index.html#features">About</a>
+                  <a class="nav-link text-light font-weight-bold" href="index.html#summarize">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark font-weight-bold" href="contact.html">Contact</a>
+                  <a class="nav-link text-light font-weight-bold" href="contact.html">Contact</a>
                 </li>
               </ul>
             </div>
@@ -104,7 +103,7 @@
   </section>
 
   <section>
-    <div class="fluid-container contactContainer">
+    <div class="container-fluid contactContainer">
       <!-- <h1 class="d-sm-inline d-md-inline d-lg-none d-xl-none">Home Improvement Services</h1> -->
       <h1>Text Us, To call back!</h1>
       <div class="row">
@@ -149,57 +148,41 @@
           </form>
           </div>
         </div>
-        <div class="col-lg-7 col-md-7 contactInfo">
-          <!-- <div class="row"> -->
-            <div class="card-deck">
-              <div class="card text-center">
-                <img class="card-img-top locate" src="https://img.icons8.com/color/48/000000/place-marker--v1.png" alt="Address">
-                <div class="card-body">
-                  <h5 class="card-title">Visit Us</h5>
-                  <p class="card-text">SAVA 21 llc <br> 679, Bound Brook Rd, Middlesex, New Jersey, 08846</p>
+        <div class="col-lg-1 col-md-1 hidden-ss verticalLine">
 
-                </div>
-              </div>
-              <div class="card text-center">
-                <img class="card-img-top PhoneContact" src="https://img.icons8.com/color/48/000000/phone.png" alt="Phone">
+        </div>
+        <div class="col-lg-6 col-md-6">
+          <div class="container contactInfo">
+          <div class="row gy-3 contactCard">
+            <div class="col-lg-6 col-md-6 col-sm-12">
+              <div class="card phonEmailCard h-100">
+                <img class="PhoneContact" src="https://img.icons8.com/color/48/000000/phone.png" alt="Phone">
                 <div class="card-body">
                   <h5 class="card-title">Call Us</h5>
                   <p class="card-text"><strong>(201) 780-3724</strong> <br>Weekdays 8am to 4pm EST</p>
-
                 </div>
               </div>
-              <div class="card text-center">
-
-                <img class="card-img-top email" src="https://img.icons8.com/color/48/000000/apple-mail.png" alt="Email">
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+              <div class="card phonEmailCard h-100">
+                <img class="email" src="https://img.icons8.com/color/48/000000/apple-mail.png" alt="Email">
                 <div class="card-body">
                   <h5 class="card-title">Write to Us</h5>
                   <p class="card-text">fernando@sava21.com</p>
-
                 </div>
               </div>
             </div>
-            <!-- <div class="col-sm-6">
-              <div class="card text-center border-secondary">
-                <img class="card-img-top locate" src="https://img.icons8.com/color/48/000000/place-marker--v1.png" alt="Address">
-                <div class="card-body">
-                  <h5 class="card-title">Address</h5>
-                  <p class="card-text">SAVA 21 llc <br> 679, Bound Brook Rd, Middlesex, New Jersey, 08846</p>
+          </div>
+          <div class="row">
+                <div class="card ">
 
+                  <div class="card-body">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3030.187637451559!2d-74.4953678849705!3d40.581613479346245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3b8d17bf3e757%3A0xa727b9d4f44304cb!2s679%20Bound%20Brook%20Rd%2C%20Middlesex%2C%20NJ%2008846!5e0!3m2!1sen!2sus!4v1651875584489!5m2!1sen!2sus" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="card text-center border-secondary">
-                <img class="card-img-top PhoneContact" src="https://img.icons8.com/color/48/000000/phone.png" alt="Phone">
-                <div class="card-body">
-                  <h5 class="card-title">Call Us</h5>
-                  <p class="card-text"><strong>(201) 780-3724</strong> <br>Weekdays 8am to 4pm EST</p>
-
-                </div>
-              </div>
-            </div> -->
-          <!-- </div> -->
-
+          </div>
         </div>
       </div>
     </div>
