--- a/gallery.html
+++ b/gallery.html
@@ -29,9 +29,6 @@
 </head>
 
 <body>
-  <!-- <div class="container mainContainer"> -->
-
-
   <button type="button" name="button" id="btnScrollToTop">
     <i class="material-icons">arrow_upward</i>
   </button>
@@ -44,7 +41,9 @@
           <div class="col-lg-7">
             <a class="navbar-brand" href="index.html">
               <img class="d-inline-block logo" src="images/logo.png" width="110" height="133" alt="logo" longdesc="index.html">
-              <p class="title text-dark font-weight-bold">Custom Woodworks <br class="hidden-ss"> and <br class="hidden-ss"> Home Improvements</p>
+              <p class="title text-light font-weight-bold">Custom Woodworks <br> & <br> Home Improvements</p>
+              
+              <!-- <p class="title text-light font-weight-bold">Custom Woodworks <br class="hidden-ss"> and <br class="hidden-ss"> Home Improvements</p> -->
               <!-- <span class="title text-dark font-weight-bold">Custom Woodworks</span><br>
               <span class="title text-dark font-weight-bold">Home Improvements</span> -->
             </a>
@@ -82,19 +81,19 @@
               <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item">
-                  <a class="nav-link text-dark font-weight-bold" href="index.html">Home</a>
+                  <a class="nav-link text-light font-weight-bold" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark font-weight-bold" href="index.html#services">Services</a>
+                  <a class="nav-link text-light font-weight-bold" href="index.html#services">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark font-weight-bold" href="#gallery">Gallery</a>
+                  <a class="nav-link text-light font-weight-bold" href="#gallery">Gallery</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark font-weight-bold" href="index.html#features">About</a>
+                  <a class="nav-link text-light font-weight-bold" href="index.html#summarize">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-dark font-weight-bold" href="contact.html">Contact</a>
+                  <a class="nav-link text-light font-weight-bold" href="contact.html">Contact</a>
                 </li>
               </ul>
             </div>
